--- a/hackaton.html
+++ b/hackaton.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>burungsenja</title>
+</head>
+<body>
+    <div>
 
+        <nav class="navbar">
+            <h1>Burung Senja</h1>
+        </nav> 
+    </div>
+    <div class="container">
+        <div class="column">
+            <div class="profil">
+                <img src="burungsenja.jpg" alt="burungburung">
+            </div>
+          <p>Anonymous</p>
+          <p>Pilih Profil Kamu</p>
+        </div>
+        <div class="column">
+          <h2>Tulis Keluh Kesah</h2>
+          <p>This is the content of column 2.</p>
+        </div>
+        <div class="column">
+          <h2>Poster</h2>
+          <p>This is the content of column 3.</p>
+        </div>
+      </div>
+</body>
+</html>
+</html>
