--- a/hackaton.html
+++ b/hackaton.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div>
-
         <nav class="navbar">
             <h1>Burung Senja</h1>
         </nav> 
@@ -20,14 +19,26 @@
             </div>
           <p>Anonymous</p>
           <p>Pilih Profil Kamu</p>
+          <div class="cards">
+              <div class="card" style="width: 18rem;">
+                <p> <span>  <img src="Blackpink_aesthetic_default_profile_photo.jpeg" class="card-img-top" alt="gambar1"></span>
+                     <span> <img src="Profile_Picture_Icon_queen.jpeg" alt="gambar2"></span></p>
+               
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+
+          </div>
+          </div>
         </div>
         <div class="column">
           <h2>Tulis Keluh Kesah</h2>
-          <p>This is the content of column 2.</p>
         </div>
         <div class="column">
           <h2>Poster</h2>
-          <p>This is the content of column 3.</p>
         </div>
       </div>
 </body>
