--- a/hackaton.html
+++ b/hackaton.html
@@ -12,7 +12,10 @@
             <h1>Burung Senja</h1>
         </nav> 
     </div>
+
+
     <div class="container">
+      <span>
         <div class="column">
             <div class="profil">
                 <img src="burungsenja.jpg" alt="burungburung">
@@ -30,16 +33,24 @@
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-
           </div>
           </div>
-        </div>
-        <div class="column">
-          <h2>Tulis Keluh Kesah</h2>
-        </div>
-        <div class="column">
-          <h2>Poster</h2>
-        </div>
+          </span>
+          <span>
+            <div class="column2">
+              <p><h2 >Tulis Keluh Kesah</h2></p>
+              <h3>zain</h3>
+            </div>
+            <form >
+              <input type="button" value="submit">
+            </form>
+          </span>
+          <span>
+            <div class="column3">
+              <h2>Poster</h2>
+            </div>
+          </span>
+        </div>        
       </div>
 </body>
 </html>
