--- a/hackaton.html
+++ b/hackaton.html
@@ -12,8 +12,6 @@
             <h1>Burung Senja</h1>
         </nav> 
     </div>
-
-
     <div class="container">
       <span>
         <div class="column">
@@ -38,7 +36,10 @@
           </span>
           <span>
             <div class="column2">
-              <p><h2 >Tulis Keluh Kesah</h2></p>
+              <textarea name="" 
+                id="status-text"
+                placeholder="Tulis cerita Anda..." cols="247" rows="10"
+              ></textarea>
               <h3>zain</h3>
             </div>
             <form >
